--- a/index.html
+++ b/index.html
@@ -5,20 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rick Ansay's Portfolio | Welcome to my coding website!</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+    <!--<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">-->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
 </head>
 
 <body>
 
-    <header class="header">
+    <nav class="nav">
+        <header class="nav-header">
         <h1>Rick Ansay</h1>
         <h2>Welcome to my portfolio!</h2>
         <div>
-
+            <ul class="nav-link">
+                <li>
+                    <a href="#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
+                <li>
+                    <a href="#resume">Resume</a>
+                </li>
+            </ul>
         </div>
-    
     </header>
+
+    <div class="backgroundimage"></div>
+
+
     
 </body>
 </html>
