Updated HTML sections:About Me, Work, Contact Me, and Resume

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rick Ansay's Portfolio | Welcome to my coding website!</title>
-    <!--<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">-->
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
 </head>
 
@@ -34,6 +34,40 @@
     </header>
 
     <div class="backgroundimage"></div>
+
+    <content>
+        <div class="container">
+            <div id="about-me">
+                <h1>About Me</h1>
+                <img src="https://via.placeholder.com/200" alt="Placeholder for portfolio image"></a>
+                <p>Hello! My name is Rick, and I'm currently a student learning to become a full stack developer. At present, I'm a vehicle acquisition specialist at McDonald Automotive Group. I'm looking to change into a career where I can use my creativity! Coding quickly caught my attention, and I can't wait to see where this exciting journey takes me (and hopefully you!)</p>
+            </div>
+            <div id="Work">
+                <h1>
+                    Work
+                </h1>
+                <p>
+                    Here are some examples of my work:
+                </p>
+            </div>
+            <div id="contact-me">
+                <h1>
+                    Contact Me
+                </h1>
+                <p>I am available for contact through many avenues:
+                    <ul>
+                        <li><a href="mailto: rick.ansay@gmail.com">rick.ansay@gmail.com</a></li>
+                        <li><a href="https://www.linkedin.com/in/rick-ansay-185201b1/">LinkedIn</a></li>   
+                        <li><a href="https://github.com/RickyRicer">GitHub</a></li>
+                    </ul>
+                </p>
+            </div>
+            <div id="Resume">
+                <h1>
+                    Resume
+                </h1>
+            </div>            
+    </content>
 
 
     
