Added image, added more styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rick Ansay's Portfolio | Welcome to my coding website!</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
 </head>
 
@@ -39,7 +39,7 @@
         <div class="container">
             <div id="about-me">
                 <h1>About Me</h1>
-                <img src="https://via.placeholder.com/200" alt="Placeholder for portfolio image"></a>
+                <div id="img" src="./Assets/rick.jpg" alt="Rick Ansay"></a>
                 <p>Hello! My name is Rick, and I'm currently a student learning to become a full stack developer. At present, I'm a vehicle acquisition specialist at McDonald Automotive Group. I'm looking to change into a career where I can use my creativity! Coding quickly caught my attention, and I can't wait to see where this exciting journey takes me (and hopefully you!)</p>
             </div>
             <div id="Work">
@@ -47,7 +47,7 @@
                     Work
                 </h1>
                 <p>
-                    Here are some examples of my work:
+                    Here are some examples of my work: <a href="https://rickyricer.github.io/RefactorHomework">Horiseon Homework Refactor</a>
                 </p>
             </div>
             <div id="contact-me">
