Corrected image location

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <div class="container">
             <div id="about-me">
                 <h1>About Me</h1>
-                <div id="img" src="./Assets/rick.jpg" alt="Rick Ansay"></a>
+                <img id="img" src="./Assets/rick.jpg" alt="Rick Ansay"></a>
                 <p>Hello! My name is Rick, and I'm currently a student learning to become a full stack developer. At present, I'm a vehicle acquisition specialist at McDonald Automotive Group. I'm looking to change into a career where I can use my creativity! Coding quickly caught my attention, and I can't wait to see where this exciting journey takes me (and hopefully you!)</p>
             </div>
-            <div id="Work">
+            <div id="work">
                 <h1>
                     Work
                 </h1>
@@ -62,7 +62,7 @@
                     </ul>
                 </p>
             </div>
-            <div id="Resume">
+            <div id="resume">
                 <h1>
                     Resume
                 </h1>
